Fixed flickering bug

--- a/portfolio/firstedition/static/css/vitaminsstyle.css
+++ b/portfolio/firstedition/static/css/vitaminsstyle.css
@@ -128,7 +128,6 @@ p {
 }
 
 .slot {
-    border-bottom: 3px solid #fff;
     display: flex;
     justify-content: center;
     align-items: center;
